# Paths

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: constants.h  display.h  main.h  map.h  pathfinder.h  sound.h  sparsematrix.h
resources/: test.map
src/: display.cpp  main.cpp  map.cpp  pathfinder.cpp  sound.cpp
tests/: tests.cpp
